Prevent first slider text from wrapping on ipad

--- a/source/assets/stylesheets/_global.css.scss
+++ b/source/assets/stylesheets/_global.css.scss
@@ -26,7 +26,7 @@ section .content a.more:hover {
   color:#fff;
   opacity:0.7;
   margin:5px;
-  padding:0.4em;
+  padding:0.3em;
 }
 .jumbotron a.blocked {
   background-color:#fff;
